# CARRTv3

./: .gitignore  .gitmodules  README.md
docs/: index.md
images/: README.md
notes/: BNO055.md  Connections.md  Electronics.md  PicoDebug.md  RPI_Zero_W2_Configuration.md  ResistorCalculations.md
schematics/CARRTv3/: CARRTv3.kicad_prl  CARRTv3.kicad_pro  CARRTv3.kicad_sch  CARRTv3.kicad_sym
source/: .clang-format
source/Drivers/: Clock.cpp  Clock.h  I2c.cpp  I2c.h  Keypad.cpp  Lcd.cpp  Lcd.h  Motors.cpp  Motors.h  PCA9685.cpp  PCA9685.h
source/Test/: CMakeLists.txt
source/Test/TestDrivers/: LcdTest.cpp
source/avr/: CMakeLists.txt  EventClock.cpp  EventClock.h  EventManager.cpp  EventManager.h  Events.h  SerialResponderMain.cpp  main04.cpp
source/avr/AVRTools/: README.md
source/cmake/: version.cmake
source/pico/: CMakeLists.txt  CMakePresets.json  pico.cpp
source/pico/carrt/: BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  CarrtPicoBinaryInfo.cpp  CarrtPicoDefines.h  CarrtPicoMain.cpp  CarrtPicoReset.cpp  CarrtPicoReset.h  Core1.cpp  Core1.h  CriticalSection.h  DebugMacros.h  Encoders.cpp  Encoders.h  Event.h  EventHandler.h  EventHandlers.cpp  EventHandlers.h  EventManager.cpp  EventManager.h  EventProcessor.cpp  EventProcessor.h  GitHeadInfo.h.in  MainProcess.cpp  MainProcess.h  PicoOutputUtils.hpp  PicoSerialCommands.cpp  PicoSerialCommands.h  PicoSerialMessages.cpp  PicoState.cpp  PicoState.h  SerialLink.cpp
source/pico/carrt/drivers/: BNO055.cpp  BNO055.h  I2C.cpp  I2C.h
source/pico/drivers/: BNO055.cpp  BNO055.h  Batteries.cpp  Batteries.h  CMakeLists.txt  Clock.h  Delays.h  Encoders.cpp  Encoders.h  HeartBeatLed.cpp  HeartBeatLed.h  I2C.cpp  I2C.h  SerialLinkPico.cpp  SerialLinkPico.h
source/pico/test/: CMakeLists.txt
source/pico/test/ADCtest/: CMakeLists.txt  adctest.cpp
source/pico/test/BNORaw/: BNORaw.c  CMakeLists.txt  bno055_support.c  bno055_support.h
source/pico/test/BNOTest/: BNOTest.cpp  CMakeLists.txt
source/pico/test/BatteryVTest/: BatteryVTest.cpp  CMakeLists.txt
source/pico/test/GpioInterrupt/: CMakeLists.txt  GpioInterruptTest.cpp
source/pico/test/SerialTest1/: CMakeLists.txt  SerialTest1.cpp
source/pico/test/SerialTest2/: CMakeLists.txt  SerialTest2.cpp
source/pico/test/SerialTest3/: CMakeLists.txt  SerialTest3.cpp
source/pico/test/SerialTest4/: CMakeLists.txt  SerialTest4.cpp
source/pico/test/SerialTest4a/: CMakeLists.txt  SerialTest4a.cpp
source/pico/test/SerialTest5/: CMakeLists.txt  SerialTest5.cpp
source/pico/test/helloCarrt/: CMakeLists.txt  hello.cpp
source/pico/test/i2cTest/: CMakeLists.txt  i2cScan.c
source/pico/test/multicore/: CMakeLists.txt
source/pico/utils/: CMakeLists.txt  CoreAtomic.hpp  CriticalSection.h
source/rpi/: CMakeLists.txt  CMakePresets.json  main.cpp
source/rpi/Drivers/: CarrtPigio.cpp  CarrtPigio.h  CarrtPigpio.cpp  CarrtPigpio.h  Clock.cpp  Clock.h  I2c.cpp  I2c.h  Keypad.cpp  Keypad.h  Lcd.cpp  Lcd.h  Motors.h  PCA9685.cpp  PCA9685.h
source/rpi/Test/: CMakeLists.txt
source/rpi/Test/SerialTest1/: CMakeLists.txt  SerialTest1.cpp
source/rpi/Test/SerialTest2/: CMakeLists.txt  SerialTest2.cpp
source/rpi/Test/SerialToTrinketTest/: SerialCommsToTrinketTest.cpp  serial2Trinket01.py
source/rpi/Test/TestDrivers/: CMakeLists.txt  KeypadTest.cpp  LcdOff.cpp  LcdTest.cpp  MotorTestCollective.cpp  MotorTestIndividual.cpp  SonarTest.cpp
source/rpi/Test/TestDrivers/Unconverted/: BeepTest.cpp  LSM303DLHCTestA.cpp  LidarTest.cpp  TempSensorTest.cpp
source/rpi/Utils/: CarrtError.h
source/rpi/carrt/: CMakeLists.txt  CarrtMain.cpp  CarrtRpi0Defines.h  RPi0SerialMessages.cpp
source/rpi/drivers/: Buzzer.cpp  Buzzer.h  CMakeLists.txt  CarrtPigpio.cpp  CarrtPigpio.h  CarrtPinAssignments.h  Clock.cpp  Clock.h  I2c.cpp  I2c.h  Keypad.cpp  Keypad.h  Lcd.cpp  Lcd.h  Lidar.cpp  Lidar.h  Lider.cpp  Motors.cpp  Motors.h  PCA9685.cpp  PCA9685.h  SerialLinkRPi.cpp  SerialLinkRPi.h  Servo.cpp  Servo.h  gpio_orig.h
source/rpi/test/: CMakeLists.txt
source/rpi/test/SerialMessagingTest/: CMakeLists.txt  SerialMessagingTest.cpp
source/rpi/test/SerialReceiver/: CMakeLists.txt  RPi0DumpSerialMessages.cpp  SerialReceiver.cpp
source/rpi/test/SerialTest1/: SerialTest1.cpp
source/rpi/test/SerialTest2/: CMakeLists.txt  SerialTest2.cpp
source/rpi/test/SerialTest3/: CMakeLists.txt  SerialTest3.cpp
source/rpi/test/SerialTest4/: CMakeLists.txt  SerialTest4.cpp
source/rpi/test/SerialTest5/: CMakeLists.txt  RPi0SerialCommands.cpp  SerialTest5.cpp
source/rpi/test/TestDrivers/: BeepTest.cpp  CMakeLists.txt  DriveTest.cpp  KeypadTest.cpp  LcdOff.cpp  LcdTest.cpp  LidarTest.cpp  MotorTest.cpp  MotorTestCollective.cpp  MotorTestIndividual.cpp  ServoTest.cpp  ServoTestPulse.cpp  SonarTest.cpp
source/rpi/test/TestDrivers/Unconverted/: BatteryTest.cpp  BeepTest.cpp  L3GD20Test.cpp  LSM303DLHCTestA.cpp  LSM303DLHCTestM.cpp  LidarTest.cpp  TempSensorTest.cpp
source/rpi/utils/: CMakeLists.txt  DebugUtils.hpp
source/shared/: CMakeLists.txt  CarrtError.h  DebugUtils.hpp  ErrorCodes.h  Event.h  Events.h  OutputUtils.hpp  SerialCommand.h  SerialCommandProcessor.cpp  SerialCommandProcessor.h  SerialCommands.h  SerialLink.cpp  SerialLink.h  SerialMessage.h  SerialMessageProcessor.cpp  SerialMessageProcessor.h  SerialMessages.h
source/support/: version.cmake
