add_subdirectory( ADCtest )
add_subdirectory( BNOTest )
add_subdirectory( BNORaw )
add_subdirectory( GpioInterrupt )
add_subdirectory( helloCarrt )
add_subdirectory( i2cTest )
add_subdirectory( multicore )
add_subdirectory( SerialTest1 )
add_subdirectory( SerialTest2 )
add_subdirectory( SerialTest3 )
add_subdirectory( SerialTest4 )
add_subdirectory( SerialTest4a )
add_subdirectory( SerialTest5 )
